--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+./WeModPatcher/obj/
+./WeModPatcher/bin/
+./AsarSharp/obj/
+./AsarSharp/bin/
+.idea
