--- a/WeModPatcher/WeModPatcher.csproj
+++ b/WeModPatcher/WeModPatcher.csproj
@@ -35,11 +35,15 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+          <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+        </Reference>
         <Reference Include="System"/>
         <Reference Include="System.Core"/>
         <Reference Include="System.Data"/>
         <Reference Include="System.Windows.Forms" />
         <Reference Include="System.Xml"/>
+        <Reference Include="System.Net.Http" />
         <Reference Include="System.Xaml">
             <RequiredTargetFramework>4.0</RequiredTargetFramework>
         </Reference>
@@ -61,6 +65,7 @@
         <Compile Include="ReactiveCore\RelayCommand.cs" />
         <Compile Include="Utils\Patcher.cs" />
         <Compile Include="Utils\PatternScanner.cs" />
+        <Compile Include="Utils\Updater.cs" />
         <Compile Include="View\Controls\PopupHost.xaml.cs" />
         <Compile Include="View\MainWindow\Logs.cs" />
         <Compile Include="View\MainWindow\MainWindow.xaml.cs" />
@@ -103,6 +108,7 @@
     </ItemGroup>
     <ItemGroup>
         <None Include="App.config" />
+        <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="Style\Inter_18pt-Regular.ttf" />
